# engram

./: .env.example  .gitignore  API.md  BENCHMARKS.md  CODE_OF_CONDUCT.md  COMPARISON.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  benchmark_results.txt  docker-compose.cluster.yml  docker-compose.yml  engram.md  lib.rs  prometheus.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
benches/: context_assembly_benchmark.rs  e2e_throughput.rs  real_store_latency.rs
benchmarks/: README.md  beam_engram.py  longmemeval_engram.py  quality_common.py  requirements.txt
docs/: API.md  ARCHITECTURE.md  BENCHMARKS.md  COMPARISON.md  QUALITY_BENCHMARKS.md  SSOT.md  VISION.md
proto/: raft.proto
scripts/: cluster-init.sh  cluster-verify.sh  generate_benchmark_report.sh  health_check.sh  run_benchmarks.sh  run_quality_benchmarks.sh  validate_openapi.sh
src/: app.rs  assembler.rs  cluster.rs  config.rs  core.rs  embedding.rs  lib.rs  logging.rs  main.rs  metrics.rs  models.rs  server.rs  worker.rs
src/consolidation/: handler.rs  mod.rs  scheduler.rs  store.rs
src/knowledge/: export.rs  extractor.rs  global.rs  global_handler.rs  graph.rs  handler.rs  mod.rs  summarizer.rs  types.rs  worker.rs
src/raft/: grpc_server.rs  log_store.rs  mod.rs  network.rs  proto_conv.rs  recovery.rs  snapshot.rs  state_machine.rs  types.rs
src/stores/: lancedb.rs  mod.rs  redis_consolidated.rs  redis_core_memory.rs  redis_shortterm.rs
tests/: e2e_test.rs  integration_test.rs  lancedb_store.rs  raft_write_test.rs  redis_stores.rs  token_efficiency.rs  worker.rs
tools/: local_embed_server.py
