[package]
name = "engram"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
arrow-array = "56"
arrow-schema = "56"
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
lancedb = "0.23"
rand = "0.9"
redis = { version = "0.32", features = ["aio", "tokio-comp"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tiktoken-rs = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "sync", "time"] }
tower-http = { version = "0.6", features = ["cors"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
axum-test = "17"
tempfile = "3"
testcontainers = "0.23"
wiremock = "0.6"
