[package]
name = "engram"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
arrow-array = "56"
arrow-schema = "56"
axum = "0.8"
axum-prometheus = "0.10"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
lancedb = "0.23"
prometheus = "0.14"
rand = "0.9"
redis = { version = "0.32", features = ["aio", "tokio-comp"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tiktoken-rs = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tower-http = { version = "0.6", features = ["cors"] }
utoipa = { version = "5.4", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "9", features = ["axum", "vendored"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
axum-test = "17"
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"
testcontainers = "0.23"
tracing-test = "0.2"
wiremock = "0.6"

[[bench]]
name = "context_assembly_benchmark"
harness = false
